trying to fix layout issue

--- a/client/src/components/sidebarItem/sidebar-item.style.scss
+++ b/client/src/components/sidebarItem/sidebar-item.style.scss
@@ -6,6 +6,7 @@
     align-items: center;
     gap: 8px;
     border-radius: var(--radius-8);
+    cursor: pointer;
 
     &:hover {
         background-color: var(--color-hover-bg);
